2018-07-05 huku <huku@grhack.net>

  * Fixed bug in `register_constants()' (issue #3, spotted by @majinxx297).
  * Updated "Makefile" to make it compatible with newer versions of XED
    (issue #2, spotted by @andermoran).
  * Minor "README.md" updates.


2016-10-06 huku <huku@grhack.net>

   * Added "setup.py" and modified makefiles accordingly.


2016-05-24 huku <huku@grhack.net>

    * Updated Windows makefiles and uploaded new precompiled binaries.


2016-04-29 huku <huku@grhack.net>

    * Fixed compilation problem introduced in previous commit (spotted by
      @imosukebe).


2016-04-01 huku <huku@grhack.net>

    * Removed unused `*args' argument in `M_NOARG' methods.
    * Fixed `NULL' pointer dereference in `new_rflags()' when trying to read
      EFLAGS/RFLAGS of an instruction that doesn't use it.
    * Various code clean-ups, especially in "instruction.c".
    * Renamed "written_regs.py" to "dump_written_regs.py" in "examples/".


2016-03-26 huku <huku@grhack.net>

    * Implemented `get_isa_set()' in class `Instruction'.


2016-03-25 huku <huku@grhack.net>

    * Tested latest version of Intel's XED, which now comes as a standalone
      library.
    * Updated "README.md".


2015-12-04 huku <huku@grhack.net>

    * Fixed typo in "decoder.h".
    * Replaced calls to `Py*_Check()' with `Py*_CheckExact()'.
    * Modified "Makefile" to use "python2.7-config".
    * Added link to precompiled binaries for Microsoft Windows and updated
      "README.md" accordingly.


2015-10-07 huku <huku@grhack.net>

    * Fixed memory leak in method `decode()' of class `Decoder'.
    * Switched type of member attributes in `Decoder' and `Instruction' from
      `T_OBJECT' to `T_ULONGLONG'; results in faster and more efficient code
      with less memory allocations.


2015-09-22 huku <huku@grhack.net>

    * Renamed `get_immediate_is_signed()' to `is_immediate_signed()'.
    * `XED_OPVIS_XXX' constants are now visible to Python.


2015-09-21 huku <huku@grhack.net>
