@@ -1,6 +1,7 @@
 core
 a.out
-
+.idea
+build
 *~
 *.local
 *.o
