@@ -1,7 +1,7 @@
 #ifndef _INCLUDES_H_
 #define _INCLUDES_H_
 
-#include "Python.h"
+#include <Python.h>
 #include "structmember.h"
 
 #include <stdio.h>
@@ -23,5 +23,17 @@
  * system by LLVM. According to K&R, however, using `{NULL}' is correct.
  */
 #define M_NULL {NULL, NULL, 0, NULL}
+
+#if PY_MAJOR_VERSION >= 3
+    #define PyInt_CheckExact PyLong_CheckExact
+    #define PyInt_FromLong PyLong_FromLong
+    #define PyInt_FromSize_t PyLong_FromSize_t
+    #define PyString_CheckExact PyBytes_CheckExact
+    #define PyString_Size PyBytes_Size
+    #define PyString_AsString PyBytes_AsString
+    #define PyString_FromFormat PyBytes_FromFormat
+    #define PyString_FromString PyBytes_FromString
+    #define PyExc_StandardError PyExc_Exception
+#endif
 
 #endif /* _INCLUDES_H_ */
